--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-MONGO_URL = mongodb+srv://pranithtpm:X6kL7AycQoVRrePX@cluster0.j6batmc.mongodb.net/?retryWrites=true&w=majority;
+NODE_ENV = development
+MONGO_URL = mongodb+srv://pranithtpm:X6kL7AycQoVRrePX@cluster0.j6batmc.mongodb.net/?retryWrites=true&w=majority
+PORT = 4000
 JWT_SECRET = '4gdfHtdtGvD$%sgR$%%efEF'
