--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
+    "react-horizontal-scrolling-menu": "^7.1.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-simple-chatbot": "^0.6.1",
