--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "lottie-react": "^2.4.0",
+    "nodemailer": "^6.9.14",
     "openai": "^4.52.7",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
