--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
-MONGO_URL = mongodb+srv://pranithtpm:X6kL7AycQoVRrePX@cluster0.j6batmc.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://<username>:<password>@cluster0.j6batmc.mongodb.net/?retryWrites=true&w=majority
 PORT = 4000
-API_KEY = sk-proj-Yn3dmLSL25ljsOodov7kT3BlbkFJjjcHGyvnJYiexCE3YyMy
-JWT_SECRET = '4gdfHtdtGvD$%sgR$%%efEF'
+OPENAI_API_KEY = sk-proj-Yn3dmLSL25ljsOodov7kT3BlbkFJjjcHGyvnJYiexCE3YyMy # It's a dummy string
+JWT_SECRET = '4gdfHtdtGvD$%sgR$%%efEF' # User Defined String
