--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
-MONGO_URL = mongodb+srv://<username>:<password>@cluster0.j6batmc.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Admin:admin123@cluster0.bjda1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 4000
 OPENAI_API_KEY = sk-proj-Yn3dmLSL25ljsOodov7kT3BlbkFJjjcHGyvnJYiexCE3YyMy # It's a dummy string
 JWT_SECRET = '4gdfHtdtGvD$%sgR$%%efEF' # User Defined String
